<resources>
    <string name="app_name">Projekat PMSU2020 sf 1 5 28</string>
    <string name="User">User</string>
    <string name="Email">Email</string>
    <string name="Emails">Emails</string>
    <string name="Folders">Folders</string>
    <string name="Contacts">Contacts</string>
    <string name="Settings">Settings</string>
    <string name="Search">Search</string>
    <string name="From">From</string>
    <string name="To">To</string>
    <string name="CC">CC</string>
    <string name="BCC">BCC</string>
    <string name="Subject">Subject</string>
    <string name="Content">Content</string>
    <string name="Compose">Compose</string>
    <string name="Send">Send</string>
    <string name="Attachment">Attachment</string>
    <string name="pref_sync_title">Refresh emails interval</string>
    <string name="SortEmails">Sort emails</string>
    <string name="sender">Sender</string>
    <string name="DateTimeExample">2020-02-02 10:00</string>
    <string name="sender_email">sender@gmail.com</string>
    <string name="CCExamle">sender@gmail.com</string>
    <string name="BCCExample">sender_bcc@gmail.com</string>
    <string name="EmailToExample">receiver@gmail.com</string>
    <string name="delete">Delete</string>
    <string name="move_to">Move to</string>
    <string name="change_tags">Change tags</string>
    <string name="Login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="contact_name">Contact name</string>
    <string name="NumberTen">10</string>
    <string name="folder_name">Folder name</string>
    <string name="splash_image_description">Splash image</string>
    <string name="group_title">Group title</string>
    <string name="new_folder">New folder</string>
    <string name="Edit">Edit</string>
    <string name="create_contact">Create contact</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="Surname">Surname</string>
    <string name="eMail">e-Mail</string>
    <string name="display_name">Display name</string>
    <string name="Ok">Ok</string>
    <string name="fisrtName">firstName</string>
    <string name="firstName">First Name</string>
    <string name="name">Name</string>
    <string name="lastName">Last Name</string>
    <string name="displayName">Display Name</string>
    <string name="contactEmail">Email</string>
    <string name="profileUsername">Username</string>
    <string name="log_out">Log out</string>
    <string name="switch_account">Switch account</string>
    <string name="value_to_check">Value to check</string>
    <string name="move">MOVE</string>
    <string name="copy">COPY</string>
    <string name="delete_capital">DELETE</string>
    <string name="yes">Yes</string>
    <string name="delete_folder_alert_message">Are you sure that you want to delete this folder?</string>
    <string name="delete_email_alert_message">Are you sure that you want to delete this email?</string>
    <string name="delete_rule">Delete rule</string>
    <string name="delete_folder">Delete folder</string>
    <string name="delete_email">Delete email</string>
    <string name="rules">Rules:</string>
    <string name="add">ADD</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="delete_contact_alert_message">Are you sure that you want to delete this contact?</string>
    <string name="note">Note</string>
    <string name="smtpAddress">Smtp address (smtp.gmail.com)</string>
    <string name="smtpPort">Smtp port (587)</string>
    <string name="inServerAddress">In server address (pop.gmail.com)</string>
    <string name="inServerPort">In server port (995)</string>
    <string name="create_account">Create account</string>
    <string name="reply">Reply</string>
    <string name="replyAll">Reply to all</string>
    <string name="forward">Forward</string>
    <string name="Register">Register</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="change_password">Change password</string>
    <string name="manage_accounts">Manage accounts</string>
    <string name="current_email">Current active email</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="repeated_password">Repeated new password</string>
    <string name="change">Change</string>
    <string name="Accounts">Accounts</string>
    <string name="delete_account">Delete account</string>
    <string name="delete_account_alert_message">Are you sure that you want to delete this account?</string>
    <string name="apply_rules">Apply rules</string>
    <string name="Filter">Filter by tags</string>
    <string name="Sort">Sort</string>
</resources>
