<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_reply"
        android:title="@string/reply"
        app:showAsAction="never"/>

    <item
        android:id="@+id/item_replyAll"
        android:title="@string/replyAll"
        app:showAsAction="never"/>

    <item
        android:id="@+id/item_forward"
        android:title="@string/forward"
        app:showAsAction="never"/>

    <item
        android:id="@+id/item_deleteEmail"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/item_moveEmails"
        android:title="@string/move_to"
        app:showAsAction="never"/>

    <item
        android:id="@+id/item_changeTags"
        android:title="@string/change_tags"
        app:showAsAction="never"/>

</menu>