<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_emails"
        android:checkable="true"
        android:icon="@drawable/ic_email"
        android:title="@string/Emails"/>

    <item
        android:id="@+id/item_folders"
        android:checkable="true"
        android:icon="@drawable/ic_folder"
        android:title="@string/Folders"/>

    <item
        android:id="@+id/item_contacts"
        android:checkable="true"
        android:icon="@drawable/ic_contacts"
        android:title="@string/Contacts"/>

    <item
        android:id="@+id/item_accounts"
        android:checkable="true"
        android:icon="@drawable/ic_accounts"
        android:title="@string/Accounts"/>

    <item
        android:id="@+id/item_settings"
        android:checkable="false"
        android:icon="@drawable/ic_settings"
        android:title="@string/Settings"/>

    <item
        android:id="@+id/item_logout"
        android:checkable="false"
        android:icon="@drawable/ic_logout"
        android:title="@string/log_out" />

</menu>