<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardContact"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/perfectDark">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/contact_icon"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:src="@drawable/ic_user"/>

        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:layout_marginTop="15dp"
            android:textSize="25sp"
            android:layout_below="@id/contact_icon"
            android:text="@string/username"/>

        <TextView
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:layout_marginTop="5dp"
            android:textSize="25sp"
            android:layout_below="@id/username"
            android:text="@string/firstName"/>

        <TextView
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:layout_marginTop="5dp"
            android:textSize="25sp"
            android:layout_below="@id/firstName"
            android:text="@string/lastName"/>

        <TextView
            android:id="@+id/displayName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:layout_marginTop="5dp"
            android:textSize="25sp"
            android:layout_below="@id/lastName"
            android:text="@string/displayName"/>

        <TextView
            android:id="@+id/contactEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:layout_marginTop="5dp"
            android:textSize="25sp"
            android:layout_below="@id/displayName"
            android:text="@string/contactEmail"/>
    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>